fix: [PIE-1479]: fix tooltip alignment issue in description and tags (#5646)

--- a/src/modules/10-common/components/NameIdDescriptionTags/NameIdDescriptionTags.module.scss
+++ b/src/modules/10-common/components/NameIdDescriptionTags/NameIdDescriptionTags.module.scss
@@ -56,4 +56,6 @@
 }
 .descriptionLabel {
   margin-bottom: var(--spacing-xsmall) !important;
+  display: flex !important;
+  align-items: center;
 }
